@@ -112,7 +112,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>${maven.surefire.version}</version>
 	    <configuration>
-	      <argLine>-Xmx2048m</argLine>
+	      <argLine>-Xmx1800m -XX:+UseConcMarkSweepGC</argLine>
 	    </configuration>
          </plugin>
          <plugin>
